build_errors.txt
cargo :     Checking mtt-file-manager v0.1.0 
(C:\MTT File Manager)
At line:1 char:1
+ cargo check 2>&1 | Out-File -FilePath 
build_errors.txt -Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  
      Checking mt...T File Manager):String) [  
  ], RemoteException
    + FullyQualifiedErrorId : NativeCommandErr 
   or
 
error[E0432]: unresolved import `egui`
 --> src\ui\svg_icons.rs:8:5
  |
8 | use egui::{ColorImage, TextureHandle, 
TextureOptions};
  |     ^^^^ help: a similar path exists: 
`eframe::egui`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `usvg`
  --> src\ui\svg_icons.rs:76:15
   |
76 |     let opt = usvg::Options::default();
   |               ^^^^ use of unresolved 
module or unlinked crate `usvg`
   |
   = help: if you wanted to use a crate named 
`usvg`, use `cargo add usvg` to add it to your 
`Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `usvg`
  --> src\ui\svg_icons.rs:77:16
   |
77 |     let tree = 
usvg::Tree::from_str(&svg_data, &opt).ok()?;
   |                ^^^^ use of unresolved 
module or unlinked crate `usvg`
   |
   = help: if you wanted to use a crate named 
`usvg`, use `cargo add usvg` to add it to your 
`Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
   --> src\ui\svg_icons.rs:139:13
    |
139 |             egui::ImageButton::new(egui::
load::SizedTexture::new(
    |             ^^^^ use of unresolved 
module or unlinked crate `egui`
    |
    = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
   --> src\ui\svg_icons.rs:139:36
    |
139 |             egui::ImageButton::new(egui::
load::SizedTexture::new(
    |                                    ^^^^ 
use of unresolved module or unlinked crate 
`egui`
    |
    = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
   --> src\ui\svg_icons.rs:153:16
    |
153 |         ui.add(egui::Button::new("?").min
_size(egui::vec2(size, size)))
    |                ^^^^ use of unresolved 
module or unlinked crate `egui`
    |
    = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
   --> src\ui\svg_icons.rs:171:18
    |
171 |         
ui.image(egui::load::SizedTexture::new(
    |                  ^^^^ use of unresolved 
module or unlinked crate `egui`
    |
    = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
  --> src\ui\svg_icons.rs:36:15
   |
36 |         ctx: &egui::Context,
   |               ^^^^ use of unresolved 
module or unlinked crate `egui`
   |
   = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`
help: consider importing this crate
   |
 5 + use eframe::egui;
   |

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
   --> src\ui\svg_icons.rs:125:14
    |
125 |     ui: &mut egui::Ui,
    |              ^^^^ use of unresolved 
module or unlinked crate `egui`
    |
    = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`
help: consider importing this crate
    |
  5 + use eframe::egui;
    |

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
   --> src\ui\svg_icons.rs:130:6
    |
130 | ) -> egui::Response {
    |      ^^^^ use of unresolved module or 
unlinked crate `egui`
    |
    = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`
help: consider importing this crate
    |
  5 + use eframe::egui;
    |

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
   --> src\ui\svg_icons.rs:141:17
    |
141 |                 egui::vec2(size, size),
    |                 ^^^^ use of unresolved 
module or unlinked crate `egui`
    |
    = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`
help: consider importing this crate
    |
  5 + use eframe::egui;
    |

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
   --> src\ui\svg_icons.rs:153:48
    |
153 |         ui.add(egui::Button::new("?").min
_size(egui::vec2(size, size)))
    |                                          
      ^^^^ use of unresolved module or 
unlinked crate `egui`
    |
    = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`
help: consider importing this crate
    |
  5 + use eframe::egui;
    |

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
   --> src\ui\svg_icons.rs:159:14
    |
159 |     ui: &mut egui::Ui,
    |              ^^^^ use of unresolved 
module or unlinked crate `egui`
    |
    = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`
help: consider importing this crate
    |
  5 + use eframe::egui;
    |

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate `egui`
   --> src\ui\svg_icons.rs:173:13
    |
173 |             egui::vec2(size, size),
    |             ^^^^ use of unresolved 
module or unlinked crate `egui`
    |
    = help: if you wanted to use a crate named 
`egui`, use `cargo add egui` to add it to your 
`Cargo.toml`
help: consider importing this crate
    |
  5 + use eframe::egui;
    |

warning: unused import: `std::sync::Arc`
 --> src\ui\svg_icons.rs:7:5
  |
7 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

error[E0282]: type annotations needed
  --> src\ui\svg_icons.rs:45:25
   |
45 |             return Some(texture.clone());
   |                         ^^^^^^^ cannot 
infer type

Some errors have detailed explanations: E0282, 
E0432, E0433.
For more information about an error, try 
`rustc --explain E0282`.
warning: `mtt-file-manager` (lib) generated 1 
warning
error: could not compile `mtt-file-manager` 
(lib) due to 15 previous errors; 1 warning 
emitted
